# weitu

./: .gitignore  CMakeLists.txt  package.xml
include/: weitu.h
scripts/: cali.py  record.txt
src/: weitu.cpp  weitu_finder.cpp  weitu_ros.cpp
src/edcircle/: edcircle.cpp
src/finder/: finderpattern.h  finderpatternfinder.cpp  finderpatternfinder.h
src/seg/: seg.cpp  seg.h
src/seg/CIEDE2000/: CIEDE2000.cpp  CIEDE2000.h
src/segmentation/: seg.h
test/: find_screwhole .cpp  find_screwhole.cpp  test.cpp
